Agregué la nueva sección de contacto

--- a/portfolio-details - blgr.html
+++ b/portfolio-details - blgr.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-EC">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portafolio - detallado</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Portafolio - Tienda Online Belaguer</title>
+  <meta name="description" content="Detalles del proyecto de creación de la tienda online de ropa Belaguer, con un diseño minimalista y moderno.">
+  <meta name="keywords" content="diseño web, tienda online, ecommerce, belaguer, ropa, moda, portafolio">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="URL_DE_TU_SITIO_WEB/portfolio-details%20-%20blgr.html">
+  <meta property="og:title" content="Portafolio - Tienda Online Belaguer">
+  <meta property="og:description" content="Detalles del proyecto de creación de la tienda online de ropa Belaguer, con un diseño minimalista y moderno.">
+  <meta property="og:image" content="URL_DE_IMAGEN_PARA_COMPARTIR">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="URL_DE_TU_SITIO_WEB/portfolio-details%20-%20blgr.html">
+  <meta property="twitter:title" content="Portafolio - Tienda Online Belaguer">
+  <meta property="twitter:description" content="Detalles del proyecto de creación de la tienda online de ropa Belaguer, con un diseño minimalista y moderno.">
+  <meta property="twitter:image" content="URL_DE_IMAGEN_PARA_COMPARTIR">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -47,15 +61,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-blgr-1.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-blgr-1.jpg" alt="Captura de pantalla del sitio web de Belaguer">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-blgr-2.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-blgr-2.jpg" alt="Otra captura de pantalla del sitio web de Belaguer">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-blgr-3.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-blgr-3.jpg" alt="Tercera captura de pantalla del sitio web de Belaguer">
                 </div>
 
               </div>
