--- a/portfolio-details - dade.html
+++ b/portfolio-details - dade.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-EC">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portafolio - detallado</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Portafolio - Mantenimiento y Optimización para DadeTrade</title>
+  <meta name="description" content="Proyecto de mantenimiento y optimización para DadeTrade, incluyendo la creación de un catálogo virtual y la mejora en la prestación de servicios.">
+  <meta name="keywords" content="mantenimiento web, optimización web, catálogo virtual, dade, dadetrade, portafolio">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="URL_DE_TU_SITIO_WEB/portfolio-details%20-%20dade.html">
+  <meta property="og:title" content="Portafolio - Mantenimiento y Optimización para DadeTrade">
+  <meta property="og:description" content="Proyecto de mantenimiento y optimización para DadeTrade, incluyendo la creación de un catálogo virtual y la mejora en la prestación de servicios.">
+  <meta property="og:image" content="URL_DE_IMAGEN_PARA_COMPARTIR">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="URL_DE_TU_SITIO_WEB/portfolio-details%20-%20dade.html">
+  <meta property="twitter:title" content="Portafolio - Mantenimiento y Optimización para DadeTrade">
+  <meta property="twitter:description" content="Proyecto de mantenimiento y optimización para DadeTrade, incluyendo la creación de un catálogo virtual y la mejora en la prestación de servicios.">
+  <meta property="twitter:image" content="URL_DE_IMAGEN_PARA_COMPARTIR">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -47,15 +61,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-da-1.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-da-1.jpg" alt="Captura de pantalla del sitio web de DadeTrade">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-da-2.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-da-2.jpg" alt="Otra captura de pantalla del sitio web de DadeTrade">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-da-3.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-da-3.jpg" alt="Tercera captura de pantalla del sitio web de DadeTrade">
                 </div>
 
               </div>
