--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-EC">
 
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>CODEKILLS DESARROLLO WEB</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
+    <title>Jonathan Mata - Programador Full Stack en Quito, Ecuador</title>
+    <meta name="description" content="Portafolio de Jonathan Mata, programador Full Stack especializado en desarrollo web, ciberseguridad y marketing digital. Conoce mis proyectos, habilidades y experiencia.">
+    <meta name="keywords" content="desarrollo web, programador full stack, quito, ecuador, ciberseguridad, marketing digital, seo, aws, salesforce">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="URL_DE_TU_SITIO_WEB">
+    <meta property="og:title" content="Jonathan Mata - Programador Full Stack en Quito, Ecuador">
+    <meta property="og:description" content="Portafolio de Jonathan Mata, programador Full Stack especializado en desarrollo web, ciberseguridad y marketing digital.">
+    <meta property="og:image" content="URL_DE_IMAGEN_PARA_COMPARTIR">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="URL_DE_TU_SITIO_WEB">
+    <meta property="twitter:title" content="Jonathan Mata - Programador Full Stack en Quito, Ecuador">
+    <meta property="twitter:description" content="Portafolio de Jonathan Mata, programador Full Stack especializado en desarrollo web, ciberseguridad y marketing digital.">
+    <meta property="twitter:image" content="URL_DE_IMAGEN_PARA_COMPARTIR">
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Jonathan Mata",
+      "url": "URL_DE_TU_SITIO_WEB",
+      "sameAs": [
+        "https://www.instagram.com/jhony.0022/",
+        "https://github.com/Jhony33663",
+        "https://www.linkedin.com/in/jonathan-david-mata-rodriguez-62a925203/"
+      ],
+      "jobTitle": "Programador Full Stack",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "UNIVERSIDAD INTERNACIONAL DEL ECUADOR"
+      },
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Quito",
+        "addressRegion": "Pichincha",
+        "addressCountry": "EC"
+      }
+    }
+    </script>
 
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon">
@@ -54,8 +93,8 @@
         </nav><!-- .navbar -->
 
         <div class="social-links">
-          <!-- <a href="https://twitter.com/Codekills593" class="twitter"
-            target="_blank"><i class="bi bi-twitter"></i></a> -->
+          <a href="https://wa.link/i9tl23" class="whatsapp"
+            target="_blank"><i class="bi bi-whatsapp"></i></a>
           <a href="https://www.instagram.com/jhony.0022/" class="instagram"
             target="_blank"><i class="bi bi-instagram"></i></a>
           <a href="https://github.com/Jhony33663" class="github"
@@ -81,7 +120,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/me.jpg" width="600" height="600" class="img-fluid" alt="">
+            <img src="assets/img/me.jpg" width="600" height="600" class="img-fluid" alt="Foto de perfil de Jonathan Mata, programador Full Stack.">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Developer &amp; Web Designer UI/UX</h3>
@@ -813,8 +852,8 @@
             <i class="bx bx-share-alt"></i>
             <h3>Redes Sociales</h3>
             <div class="social-links">
-              <!-- <a href="https://twitter.com/Codekills593" class="twitter"
-                target="_blank"><i class="bi bi-twitter"></i></a> -->
+              <a href="https://wa.link/i9tl23" class="whatsapp"
+                target="_blank"><i class="bi bi-whatsapp"></i></a>
               <a href="https://github.com/Jhony33663" class="github"
                 target="_blank"><i class="bi bi-github"></i></a>
               <a href="https://www.instagram.com/jhony.0022/?hl=es"
