--- a/portfolio-details - vibalance.html
+++ b/portfolio-details - vibalance.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-EC">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portafolio - detallado</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Portafolio - E-commerce para Vi-Balance</title>
+  <meta name="description" content="Desarrollo de una tienda en línea para Vi-Balance, con implementación de pasarela de pagos y enfocada en la distribución de productos naturales.">
+  <meta name="keywords" content="diseño web, ecommerce, tienda en linea, pasarela de pagos, vi-balance, productos naturales, portafolio">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="URL_DE_TU_SITIO_WEB/portfolio-details%20-%20vibalance.html">
+  <meta property="og:title" content="Portafolio - E-commerce para Vi-Balance">
+  <meta property="og:description" content="Desarrollo de una tienda en línea para Vi-Balance, con implementación de pasarela de pagos y enfocada en la distribución de productos naturales.">
+  <meta property="og:image" content="URL_DE_IMAGEN_PARA_COMPARTIR">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="URL_DE_TU_SITIO_WEB/portfolio-details%20-%20vibalance.html">
+  <meta property="twitter:title" content="Portafolio - E-commerce para Vi-Balance">
+  <meta property="twitter:description" content="Desarrollo de una tienda en línea para Vi-Balance, con implementación de pasarela de pagos y enfocada en la distribución de productos naturales.">
+  <meta property="twitter:image" content="URL_DE_IMAGEN_PARA_COMPARTIR">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -47,15 +61,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="Captura de pantalla del sitio web de Vi-Balance">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="Otra captura de pantalla del sitio web de Vi-Balance">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="Tercera captura de pantalla del sitio web de Vi-Balance">
                 </div>
 
               </div>
